<resources>
    <string name="app_name">Drew\'s Event Tracker</string>

    // Login and Registration
    <string name="login_subheader">Login to view your events, or register if you don\'t have an account yet.</string>
    <string name="login_field_username">Username</string>
    <string name="login_field_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="warning_text">Username or password incorrect.\nIf you don\'t have an account, press REGISTER.</string>

    <string name="register_header">Register</string>
    <string name="register_subHeader">Please enter a unique username and secure password.</string>
    <string name="register_name_not_unique">Your username needs to be unique!</string>

    // Add Event Screen
    <string name="add_event_header">Add Event</string>
    <string name="add_event_subheader">All fields required.</string>
    <string name="add_event_title_header">Title</string>
    <string name="add_event_year_header">Year</string>
    <string name="add_event_month_header">Month</string>
    <string name="add_event_day_header">Day</string>
    <string name="add_event_hour_header">Hour</string>
    <string name="add_event_minute_header">Minute</string>
    <string name="add_event_description_header">Description</string>
    <string name="add_event_button_submit">Add</string>
    <string name="add_event_button_cancel">Cancel</string>

    // View Event Screen
    <string name="view_event_header">View Event</string>
    <string name="view_event_title_header">Title: </string>
    <string name="view_event_date_header">Date: </string>
    <string name="view_event_desc_header">Description: </string>
    <string name="view_event_button_edit">Edit</string>
    <string name="view_event_button_delete">Delete</string>
    <string name="view_event_button_back">Back</string>

    // Edit Event Screen
    <string name="edit_event_header">Edit Event</string>
    <string name="edit_event_subheader">Change whichever fields you need to.</string>
    <string name="edit_event_button_submit">Update</string>
    <string name="edit_event_button_cancel">Cancel</string>

</resources>