<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/loginSubHeader"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingBottom="20dp"
            android:text="@string/register_subHeader"
            android:textAlignment="center"
            android:textColor="@color/accent_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_field_username"
            android:textColor="@color/accent_text"
            android:textSize="20dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="95dp" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="218dp"
            android:layout_height="43dp"
            android:textColor="@color/white"
            android:layout_marginLeft="-32dp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_field_password"
            android:textColor="@color/accent_text"
            android:textSize="20dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="95dp"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="218dp"
            android:layout_height="43dp"
            android:textColor="@color/white"
            android:layout_marginLeft="-32dp"/>

        <TextView
            android:id="@+id/warningText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/warning_text"
            android:textAlignment="center"
            android:textColor="@color/warning_red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/register_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>