<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".AddEvent">

    <Button
        android:id="@+id/eventViewBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_margin="10dp"
        android:onClick="goBack"
        android:text="@string/view_event_button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:id="@+id/eventHeaderLayout">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/view_event_header"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/eventTitleLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventHeaderLayout"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_event_title_header"
            android:textColor="@color/accent_text"
            android:textSize="25sp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/viewEventTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eventDateLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventTitleLayout"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_event_date_header"
            android:textColor="@color/accent_text"
            android:textSize="25sp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/viewEventDate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eventDescriptionLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDateLayout"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_event_desc_header"
            android:textColor="@color/accent_text"
            android:textSize="25sp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/viewEventDesc"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/eventButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDescriptionLayout">

        <Button
            android:id="@+id/eventViewEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:onClick="editEvent"
            android:text="@string/view_event_button_edit" />

        <Button
            android:id="@+id/eventViewDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:onClick="deleteEvent"
            android:text="@string/view_event_button_delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>